Fixed the spacing around the vertical bar in the helpful section of the vertical bar

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -216,6 +216,7 @@ main
   justify-content: space-between
   margin-bottom: 1.5em
   padding: 0
+  cursor: pointer
 
 .rating-container
     background-color: lightgray
@@ -303,6 +304,8 @@ main
 .helpful
   color: gray
   font-size: 10px
+  span
+    margin-right: 0.5em
 
 .review-buttons
   display: flex
